--- a/App/src/app/views/protect-zone/report-factory/report-factory.component.html
+++ b/App/src/app/views/protect-zone/report-factory/report-factory.component.html
@@ -1,13 +1,22 @@
 <div class="row">
   <div class="col-md-12 mb-2 d-flex justify-content-start align-items-center">
 
-    <div class="font-weight-bold px-3">{{'Start Time' | translate}}:</div>
+    <div class="font-weight-bold px-3">{{'Filter' | translate}}:</div>
     <ejs-datepicker class="pr-3" (change)='startDateOnchange($event)' [(ngModel)]="startDate"></ejs-datepicker>
 
-    <div class="font-weight-bold pr-3">{{'End Time' | translate}}:</div>
     <ejs-datepicker class="pr-3" (change)='endDateOnchange($event)' [(ngModel)]="endDate"></ejs-datepicker>
 
-    <button type="button" class="btn btn-secondary mr-2" >Export Excel</button>
+    <button class="btn btn-sm btn-secondary mr-3" (click)="reset()"><i class="fa fa-times"></i></button>
+
+    <div class="e-toolbar-item e-search-wrapper" aria-disabled="false" title="Search">
+      <div class="e-input-group e-search" role="search">
+        <input id="grid_1706664052_0_searchbar" [(ngModel)]="code" (keyup.enter)="filter()" class="e-input" name="input" type="search" placeholder="Search">
+        <span id="grid_1706664052_0_searchbutton" class="e-input-group-icon e-search-icon e-icons" tabindex="-1" title="Search" aria-label="search">
+          <i class="fa fa-search"></i>
+        </span>
+      </div>
+   </div>
+    <button type="button" class="btn btn-secondary mx-3" (click)='excelExport()'>Export Excel</button>
 
   </div>
   <div class="col-md-12">
@@ -26,7 +35,7 @@
           <e-columns>
             <e-column field="fullName" textAlign='Center' headerText="{{ 'FullName'}}"> </e-column>
             <e-column field="code" textAlign='Center' headerText="{{ 'Code'}}"> </e-column>
-            <e-column field="testKind" textAlign='Center' headerText="{{ 'Test Kind'}}"> </e-column>
+            <e-column field="testKindId" textAlign='Center' headerText="{{ 'Test Kind'}}"> </e-column>
             <e-column field="result" textAlign='Center' headerText="{{ 'Rapid-Test result'}}"> </e-column>
             <e-column field="rapidTestTime" textAlign='Center' headerText="{{ 'Rapid-Test date'}}"> </e-column>
             <e-column field="expiryTime" textAlign='Center' headerText="{{ 'Enter factory exp. date'}}"> </e-column>
