--- a/App/src/app/views/protect-zone/test-kind/test-kind.component.html
+++ b/App/src/app/views/protect-zone/test-kind/test-kind.component.html
@@ -25,7 +25,7 @@
           [editSettings]='editSettings'
         >
           <e-columns>
-            <e-column field="ID" textAlign='Center' width="80" isPrimaryKey="true" headerText="ID">
+            <e-column field="id" textAlign='Center' width="80" isPrimaryKey="true" headerText="#">
               <ng-template #template let-data>
                 {{NO(data.index)}}
               </ng-template>
