--- a/App/src/app/views/protect-zone/staff-info/staff-info.component.html
+++ b/App/src/app/views/protect-zone/staff-info/staff-info.component.html
@@ -23,6 +23,7 @@
           [enableHover]="false"
           [toolbar]='toolbarOptions'
           [selectionSettings]="selectOptions"
+          [pageSettings]="pageSettings"
           gridLines='Both'
           (checkBoxChange)='checkBoxChange($event)'
           (rowSelected)='rowSelected($event)'        >
@@ -30,8 +31,12 @@
             <e-column type='checkbox' width='30'></e-column>
             <e-column field="id" textAlign='Center' [visible]="false" isPrimaryKey="true" headerText="{{ 'ID'}}"> </e-column>
             <e-column field="factoryName" textAlign='Center' headerText="{{ 'Factory'}}"> </e-column>
+            <e-column field="code" textAlign='Center' [width]="80" headerText="{{ 'Code'}}"> </e-column>
+            <e-column field="department" textAlign='Center' headerText="{{ 'Department'}}"> </e-column>
             <e-column field="fullName" textAlign='Center' headerText="{{ 'FullName'}}"> </e-column>
-            <e-column field="code" textAlign='Center' headerText="{{ 'Code'}}"> </e-column>
+            <e-column field="gender" textAlign='Center' [width]="80" headerText="{{ 'Gender'}}"> </e-column>
+            <e-column field="birthDate" textAlign='Center' headerText="{{ 'Birth Date'}}"> </e-column>
+
             <e-column field="seaInform" textAlign='Center' headerText="{{ 'SEA Inform'}}">
               <ng-template #template let-data>
                 <ejs-switch [checked]="data.seaInform" (change)='onChange($event, data)'></ejs-switch>
