--- a/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
+++ b/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
@@ -42,6 +42,8 @@
             <e-column field="result" textAlign='Center' headerText="{{ 'Rapid-Test result'}}"> </e-column>
             <e-column field="createdTime" textAlign='Center' headerText="{{ 'Rapid-Test date'}}"> </e-column>
             <e-column field="expiryTime" textAlign='Center' headerText="{{ 'Enter factory exp. date'}}"> </e-column>
+            <e-column field="checkInTime" textAlign='Center' headerText="{{ 'Check in time'}}"> </e-column>
+            <e-column field="checkOutTime" textAlign='Center' headerText="{{ 'Check out time'}}"> </e-column>
 
           </e-columns>
         </ejs-grid>
