revise check in, check out function

--- a/App/src/app/views/protect-zone/check-in/check-in.component.html
+++ b/App/src/app/views/protect-zone/check-in/check-in.component.html
@@ -7,7 +7,7 @@
             Check In
           </h1>
 
-          <h5 class="w3-center">Rapid Test Kind: </h5>
+          <h5 class="w3-center">Rapid Test Kind </h5>
           <div class="d-flex justify-content-center">
             <ul style="padding: 0; list-style: none;">
               <li *ngFor="let item of testKindData">
