--- a/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
+++ b/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
@@ -41,7 +41,7 @@
             <e-column field="testKindId" textAlign='Center' headerText="{{ 'Test Kind'}}"> </e-column>
             <e-column field="result" textAlign='Center' headerText="{{ 'Rapid-Test result'}}"> </e-column>
             <e-column field="createdTime" textAlign='Center' headerText="{{ 'Rapid-Test date'}}"> </e-column>
-            <e-column field="expiryTime" textAlign='Center' headerText="{{ 'Enter factory exp. date'}}"> </e-column>
+            <e-column field="expiryTime" textAlign='Center' headerText="{{ 'Entry factory exp. date'}}"> </e-column>
             <e-column field="checkInTime" textAlign='Center' headerText="{{ 'Check in time'}}"> </e-column>
             <e-column field="checkOutTime" textAlign='Center' headerText="{{ 'Check out time'}}"> </e-column>
 
