--- a/App/src/app/views/protect-zone/setting/setting.component.html
+++ b/App/src/app/views/protect-zone/setting/setting.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <div class="card">
       <div class="card-header">
-        <h3 class="card-title"><i class="fas fa-cogs"></i> Setting
+        <h3 class="card-title"> Today + setting days = Entry factory expried date
         </h3>
       </div>
       <div class="card-body table-responsive p-0">
@@ -23,7 +23,7 @@
                 #
               </ng-template>
             </e-column>
-            <e-column field="day" textAlign='Center' headerText="{{ 'Day' | translate}}"> </e-column>
+            <e-column field="day" textAlign='Center' headerText="{{ 'Setting days' | translate}}"> </e-column>
           </e-columns>
         </ejs-grid>
       </div>
