--- a/App/src/app/views/protect-zone/check-in/check-in.component.html
+++ b/App/src/app/views/protect-zone/check-in/check-in.component.html
@@ -4,27 +4,26 @@
       <div class="col-md-12">
         <form class="w3-container w3-card-4  w3-text-black ">
           <h1 class="w3-center my-3">
-            Check In
+            {{'Check In' | translate}}
           </h1>
 
-          <h5 class="w3-center">Rapid Test Kind </h5>
+          <h5 class="w3-center mb-3"> {{'Rapid Test Kind' | translate}} </h5>
           <div class="d-flex justify-content-center">
-            <ul style="padding: 0; list-style: none;">
+            <ul style="padding: 0; margin: 0; list-style: none;">
               <li *ngFor="let item of testKindData">
-                <input type="radio" [id]="item.id" [(ngModel)]="kindId" [value]="item.id" name="kindId">
-                <label [for]="item.id">{{item.name}}</label>
+                <input type="radio" [id]="item.id" (ngModelChange)="success = 0" [(ngModel)]="kindId" [value]="item.id" name="kindId">
+                <label [for]="item.id">{{ item.name | translate}}</label>
               </li>
 
             </ul>
         </div>
 
-          <div class="w3-row w3-section">
-            <div class="w3-col" style="width:100px">
-              <img src="../../../../assets/img/gif/1981.gif" height="40px" width="80%" alt="">
+          <div class="w3-row w3-section" style="margin-top: 0px!important">
+            <div class="w3-col" style="width:auto">
+              <img src="../../../../assets/img/gif/scan.gif" style="width:100px" alt="">
             </div>
-            <div class="w3-rest">
-              <!-- [autofocusSearch]="true" -->
-              <input [ngClass]="test" name="qrcode" autocomplete="off" autoselect [ngModel]="QRCode"
+            <div class="w3-rest" style="margin-top: 12px;">
+              <input [ngClass]="test" name="qrcode" class="my-form-control" autocomplete="off" autoselect [ngModel]="QRCode"
                 (ngModelChange)='onNgModelChangeScanQRCode($event)' type="text">
             </div>
 
@@ -41,18 +40,28 @@
        <h2>HỌ TÊN: {{fullName}}</h2>
        <h2>SỐ THẺ: {{QRCode}}</h2>
        <h2>Arrive & Recorded successfully</h2>
+       <h2>Cho phép vào! </h2>
+
       </div>
     </div>
 
     <div class="card" style="width: 60%;" *ngIf="success == 404">
       <div class="card-body bg-danger">
        <h2>Not found this person. No entry. <br>Please establish data in Staff info page ! </h2>
+       <h2>Không tìm thấy anh/chị trong hệ thống! Không được vào! </h2>
       </div>
     </div>
 
     <div class="card" style="width: 60%;" *ngIf="success == 400">
       <div class="card-body bg-danger">
        <h2>No entry. <br>Please wait for SEA inform ! </h2>
+       <h2>Không được vào! Vui lòng kiểm tra thông tin từ SEA </h2>
+      </div>
+    </div>
+
+    <div class="card" style="width: 60%;" *ngIf="success == 500">
+      <div class="card-body bg-danger">
+       <h2>Lỗi mạng , vui lòng scan lại!<br>Internet error , please scan a again !</h2>
       </div>
     </div>
 
