--- a/App/src/app/views/protect-zone/check-out/check-out.component.html
+++ b/App/src/app/views/protect-zone/check-out/check-out.component.html
@@ -3,17 +3,17 @@
     <div class="row">
       <div class="col-md-12">
         <form class="w3-container w3-card-4  w3-text-black ">
-          <h1 class="w3-center my-3">Check Out</h1>
+          <h1 class="w3-center my-3">{{'Check Out' | translate}}</h1>
       <div class="d-flex justify-content-center">
 
         <div style="margin-right: 100px;">
-          <h5 class="w3-center">Rapid Test Kind </h5>
+          <h5 class="w3-center mb-3">{{'Rapid Test Kind' | translate}} </h5>
           <div class="d-flex justify-content-center">
 
-            <ul style="padding: 0; list-style: none; margin-right: 20px;">
+            <ul style="padding: 0; margin: 0; list-style: none; margin-right: 20px;">
               <li *ngFor="let item of testKindData">
-                <input type="radio" [id]="item.id" [(ngModel)]="kindId" [value]="item.id" name="kindId">
-                <label [for]="item.id">{{item.name}}</label>
+                <input type="radio" [id]="item.id" (ngModelChange)="success = 0" [(ngModel)]="kindId" [value]="item.id" name="kindId">
+                <label [for]="item.id">{{item.name | translate}}</label>
               </li>
 
             </ul>
@@ -21,17 +21,17 @@
         </div>
         </div>
         <div class="">
-          <h5 class="w3-center">Result </h5>
+          <h5 class="w3-center mb-3">{{ 'Result' | translate}} </h5>
           <div class="d-flex justify-content-center">
 
             <ul style="padding: 0; list-style: none; margin-right: 20px;">
               <li >
-                <input type="radio" id="Negative" [(ngModel)]="result" [value]="2" name="result">
-                <label for="Negative">Negative</label>
+                <input type="radio" id="Negative" [(ngModel)]="result" (ngModelChange)="success = 0" [value]="2" name="result">
+                <label for="Negative">{{ 'Negative' | translate}}</label>
               </li>
               <li >
-                <input type="radio" id="Positive" [(ngModel)]="result" [value]="1" name="result">
-                <label for="Positive">Positive</label>
+                <input type="radio" id="Positive" [(ngModel)]="result" (ngModelChange)="success = 0" [value]="1" name="result">
+                <label for="Positive">{{ 'Positive' | translate}}</label>
               </li>
 
             </ul>
@@ -39,17 +39,16 @@
         </div>
         </div>
       </div>
-          <div class="w3-row w3-section">
-            <div class="w3-col" style="width:100px">
-              <img src="../../../../assets/img/gif/1981.gif" height="40px" width="80%" alt="">
-            </div>
-            <div class="w3-rest">
-              <!-- [autofocusSearch]="true" -->
-              <input [ngClass]="test" name="qrcode" autocomplete="off" autoselect [ngModel]="QRCode"
-                (ngModelChange)='onNgModelChangeScanQRCode($event)' type="text">
-            </div>
+      <div class="w3-row w3-section" style="margin-top: 0px!important">
+        <div class="w3-col" style="width:auto">
+          <img src="../../../../assets/img/gif/scan.gif" style="width:100px" alt="">
+        </div>
+        <div class="w3-rest" style="margin-top: 12px;">
+          <input [ngClass]="test" name="qrcode" class="my-form-control" autocomplete="off" autoselect [ngModel]="QRCode"
+            (ngModelChange)='onNgModelChangeScanQRCode($event)' type="text">
+        </div>
 
-          </div>
+      </div>
         </form>
       </div>
     </div>
@@ -61,10 +60,14 @@
       <div class="card-body bg-success">
        <h2>HỌ TÊN: {{fullName}}</h2>
        <h2>SỐ THẺ: {{QRCode}}</h2>
-       <h2>{{message}}</h2>
+       <div [innerHTML]="message"></div>
       </div>
     </div>
-
+    <div class="card" style="width: 60%;" *ngIf="success == 403">
+      <div class="card-body bg-danger">
+        <div [innerHTML]="message"></div>
+      </div>
+    </div>
     <div class="card" style="width: 60%;" *ngIf="success == 400">
       <div class="card-body bg-danger">
        <h2>Please check in first!</h2>
@@ -73,9 +76,17 @@
 
     <div class="card" style="width: 60%;" *ngIf="success == 404">
       <div class="card-body bg-danger">
-       <h2>Not found this person. No entry. <br>Please establish data in Staff info page ! </h2>
+       <h2>Not found this person. No entry. <br>Please establish data in Staff info page ! </h2> <br>
+       <h2>Không tìm thấy anh/chị trong hệ thống! Không được vào! </h2>
       </div>
     </div>
+
+    <div class="card" style="width: 60%;" *ngIf="success == 500">
+      <div class="card-body bg-danger">
+       <h2>Lỗi mạng , vui lòng scan lại!<br>Internet error , please scan a again !</h2>
+      </div>
+    </div>
+
   </div>
 
 </div>
