--- a/App/src/app/views/protect-zone/check-out/check-out.component.scss
+++ b/App/src/app/views/protect-zone/check-out/check-out.component.scss
@@ -48,3 +48,17 @@
     -webkit-transform: scale(1);
     transform: scale(1);
 }
+.my-form-control {
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+  color: #555;
+  display: block;
+  font-size: 20px;
+  height: 50px;
+  line-height: 1.42857;
+  padding: 6px 12px;
+  /*width: 100%;*/
+}
