--- a/App/src/app/views/protect-zone/access-control/access-control.component.html
+++ b/App/src/app/views/protect-zone/access-control/access-control.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <form class="w3-container w3-card-4 w3-text-black ">
-          <h1 class="w3-center my-3">{{'Access Control' | translate}}</h1>
+          <h1 class="w3-center my-3"> Kiểm soát vào nhà máy - Access Control</h1>
           <div class="w3-row w3-section ">
             <div class="w3-col" style="width:auto">
               <img src="../../../../assets/img/gif/scan.gif" style="width:100px" alt="">
