--- a/App/src/app/views/protect-zone/check-in/check-in.component.html
+++ b/App/src/app/views/protect-zone/check-in/check-in.component.html
@@ -36,13 +36,18 @@
   <div class="card-body d-flex justify-content-center">
 
     <div class="card" style="width: 60%;" *ngIf="success == 200">
-      <div class="card-body bg-success">
+      <div class="card-body bg-success" *ngIf="!switchColor">
        <h2>HỌ TÊN: {{fullName}}</h2>
        <h2>SỐ THẺ: {{QRCode}}</h2>
        <h2>Arrive & Recorded successfully</h2>
        <h2>Cho phép vào! </h2>
-
       </div>
+      <div class="card-body bg-info" *ngIf="switchColor">
+        <h2>HỌ TÊN: {{fullName}}</h2>
+        <h2>SỐ THẺ: {{QRCode}}</h2>
+        <h2>Arrive & Recorded successfully</h2>
+        <h2>Cho phép vào! </h2>
+       </div>
     </div>
 
     <div class="card" style="width: 60%;" *ngIf="success == 404">
