--- a/App/src/app/views/protect-zone/access-control/access-control.component.html
+++ b/App/src/app/views/protect-zone/access-control/access-control.component.html
@@ -28,7 +28,7 @@
        <div [innerHTML]="message"></div>
       </div>
 
-      <div class="card-body bg-success" *ngIf="switchColor">
+      <div class="card-body bg-info" *ngIf="switchColor">
         <h2>HỌ TÊN: {{fullName}}</h2>
         <h2>SỐ THẺ: {{QRCode}}</h2>
         <div [innerHTML]="message"></div>
